--- a/index.html
+++ b/index.html
@@ -8,28 +8,36 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header class="page-header">
- <nav>
-    <a class="logo-name link" href="./index.html"> <span class="logo">Web</span><span class="logo-second-word">Studio</span></a>
-    
+        <div class="container header-nav">
+<nav class="page-navigation">
+    <a class="logo-name link" href="./index.html"> <span class="logo">Web</span><span
+            class="logo-second-word">Studio</span></a>
+
     <ul class="page-navigation list">
         <li><a class="page-link link current" href="./index.html">Студія</a></li>
         <li><a class="page-link link" href="./portfolio.html">Портфоліо</a></li>
         <li><a class="page-link link" href="#">Контакти</a></li>
     </ul>
- </nav>
- <ul class="list">
+</nav>
+<ul class="header-contacts list">
     <li><a class="address-header link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
     <li><a class="phone-header link" href="tel:+380961111111">+38 096 111 11 11</a></li>
- </ul>
+</ul>
+        </div>
+ 
     </header>
 <main>
         <section class="hero">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button type="button" class="hero-button">Замовити послугу</button>
+            <div class="container">
+   <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+  <button type="button" class="hero-button">Замовити послугу</button>
+
+            </div>
         </section>
 
         <section>
