--- a/index.html
+++ b/index.html
@@ -36,90 +36,107 @@
             <div class="container">
    <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
   <button type="button" class="hero-button">Замовити послугу</button>
-
             </div>
         </section>
 
-        <section>
-            <h2 class="visually-hidden">Наші переваги</h2>
-            <ul class="list">               
-                <li>
-                    <h3 class="benefits-title">Увага до деталей</h3>
-                    <p class="benefits-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>               
-                </li>
-                <li>
-                    <h3 class="benefits-title">Пунктуальність</h3>
-                    <p class="benefits-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-                </li>
-                <li>
-                    <h3 class="benefits-title">Планування</h3>
-                    <p class="benefits-text">Так само консультація з широким активом значною мірою зумовлює.</p>
-                </li>
-                <li>
-                    <h3 class="benefits-title">Сучасні технології</h3>
-                    <p class="benefits-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                </li>
-            </ul>
+        <section class="section">
+            <div class="container">
+<h2 class="visually-hidden">Наші переваги</h2>
+<ul class="benefits-menu list">
+    <li class="benefits-item">
+        <h3 class="benefits-title">Увага до деталей</h3>
+        <p class="benefits-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+    </li>
+    <li class="benefits-item">
+        <h3 class="benefits-title">Пунктуальність</h3>
+        <p class="benefits-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+    </li>
+    <li class="benefits-item">
+        <h3 class="benefits-title">Планування</h3>
+        <p class="benefits-text">Так само консультація з широким активом значною мірою зумовлює.</p>
+    </li>
+    <li class="benefits-item">
+        <h3 class="benefits-title">Сучасні технології</h3>
+        <p class="benefits-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+    </li>
+</ul>
+            </div>   
         </section>
 
         <section class="our-occupation">
-            <h2 class="occupation">Чим ми займаємось</h2>
-            <ul class="list">
-                <li>
-                   <img src="./images/our-work1.jpg" alt="Написання коду" width="370">
-                </li>
-                <li>
-                    <img src="./images/our-work2.jpg" alt="Створення додатків на телефон" width="370">
-                </li>
-                <li>
-                    <img src="./images/our-work3.jpg" alt="Графічний дизайн" width="370">
-                </li>
-            </ul>
+            <div class="container">
+<h2 class="occupation">Чим ми займаємось</h2>
+<ul class="occupation-menu list">
+    <li>
+        <img src="./images/our-work1.jpg" alt="Написання коду" width="370">
+    </li>
+    <li>
+        <img src="./images/our-work2.jpg" alt="Створення додатків на телефон" width="370">
+    </li>
+    <li>
+        <img src="./images/our-work3.jpg" alt="Графічний дизайн" width="370">
+    </li>
+</ul>
+            </div> 
         </section>
 
-        <section class="our-team">
-            <h2 class="team">Наша команда</h2>
-            <ul class="list">
-                <li class="team-theme">
-                <img src="./images/our-professionals1.jpg" alt="Ігор Дем'яненко" width="270">
-                <h3 class="team-name">Ігор Дем'яненко</h3>
-                <p lang="en" class="team-position">Product Designer</p>
-                </li>
-                <li class="team-theme">
-                    <img src="./images/our-professionals2.jpg" alt="Ольга Рєпіна" width="270">
-                    <h3 class="team-name">Ольга Рєпіна</h3>
-                    <p lang="en" class="team-position">Frontend Developer</p>
-                </li >
-                <li class="team-theme">
-                    <img src="./images/our-professionals3.jpg" alt="Микола Тарасов" width="270">
-                    <h3 class="team-name">Микола Тарасов</h3>
-                    <p lang="en" class="team-position">Marketing</p>
-                </li>
-                <li class="team-theme">
-                    <img src="./images/our-professionals4.jpg" alt="Михайло Єрмаков" width="270">
-                    <h3 class="team-name">Михайло Єрмаков</h3>
-                    <p lang="en" class="team-position">UI Designer</p>
-                </li>
-            </ul>
+        <section class="our-team section">
+            <div class="container">
+<h2 class="team">Наша команда</h2>
+<ul class="team-menu list">
+    <li class="team-theme">
+        <img src="./images/our-professionals1.jpg" alt="Ігор Дем'яненко" width="270">
+        <div class="description">
+<h3 class="team-name">Ігор Дем'яненко</h3>
+<p lang="en" class="team-position">Product Designer</p>
+        </div> 
+    </li>
+    <li class="team-theme">
+        <img src="./images/our-professionals2.jpg" alt="Ольга Рєпіна" width="270">
+        <div class="description">
+<h3 class="team-name">Ольга Рєпіна</h3>
+<p lang="en" class="team-position">Frontend Developer</p>
+        </div>
+    </li>
+    <li class="team-theme">
+        <img src="./images/our-professionals3.jpg" alt="Микола Тарасов" width="270">
+        <div class="description">
+<h3 class="team-name">Микола Тарасов</h3>
+<p lang="en" class="team-position">Marketing</p>
+        </div> 
+    </li>
+    <li class="team-theme">
+        <img src="./images/our-professionals4.jpg" alt="Михайло Єрмаков" width="270">
+        <div class="description">
+                <h3 class="team-name">Михайло Єрмаков</h3>
+                <p lang="en" class="team-position">UI Designer</p>
+        </div>
+    </li>
+</ul>
+            </div>
         </section>
 
 </main>
 
 <footer class="footer">
-    <a class="link" href="./index.html"> <span class="logo-footer">Web</span><span class="logo-footer-second">Studio</span></a>
- <address> 
+    <div class="container">
+<a class="footer-logo link" href="./index.html"> <span class="logo-footer">Web</span><span
+        class="logo-footer-second">Studio</span></a>
+<address>
     <ul class="list">
-        <li>
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow" class="place link">м. Київ, пр-т Лесі Українки, 26</a>
+        <li class="menu-item">
+            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
+                class="place link">м. Київ, пр-т Лесі Українки, 26</a>
         </li>
-        <li>
+        <li class="menu-item">
             <a class="address-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li>
+        <li class="menu-item">
             <a class="phone-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
     </ul>
- </address>
+</address>
+    </div>
 </footer>
 </body>
 </html>
