--- a/portfolio.html
+++ b/portfolio.html
@@ -15,94 +15,118 @@
 
 <body>
     <header class="page-header">
-        <nav>
-            <a class="logo-name link" href="./index.html"> <span class="logo">Web</span><span
-                    class="logo-second-word">Studio</span></a>
+        <div class="container header-nav">
+            <nav class="page-navigation">
+                <a class="logo-name link" href="./index.html"> <span class="logo">Web</span><span
+                        class="logo-second-word">Studio</span></a>
     
-            <ul class="page-navigation list">
-                <li><a class="page-link link" href="./index.html">Студія</a></li>
-                <li><a class="page-link link current" href="./portfolio.html">Портфоліо</a></li>
-                <li><a class="page-link link" href="#">Контакти</a></li>
+                <ul class="page-navigation list">
+                    <li><a class="page-link link" href="./index.html">Студія</a></li>
+                    <li><a class="page-link link current" href="./portfolio.html">Портфоліо</a></li>
+                    <li><a class="page-link link" href="#">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul class="header-contacts list">
+                <li><a class="address-header link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="phone-header link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="list">
-            <li><a class="address-header link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="phone-header link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
 
 <main>
-<section>
-    <h1 class="visually-hidden">Наші послуги</h1>
-    <ul class="list">
-        <li><button type="button" class="main-button">Усі</button></li>
-        <li><button type="button" class="secondary-button">Веб-сайти</button></li>
-        <li><button type="button" class="secondary-button">Додатки</button></li>
-        <li><button type="button" class="secondary-button">Дизайн</button></li>
-        <li><button type="button" class="secondary-button">Маркетинг</button></li>
-    </ul>
+<section class="section">
+    <div class="container">
+<h1 class="visually-hidden">Наші послуги</h1>
+<ul class="button-menu list">
+    <li><button type="button" class="main-button">Усі</button></li>
+    <li><button type="button" class="secondary-button">Веб-сайти</button></li>
+    <li><button type="button" class="secondary-button">Додатки</button></li>
+    <li><button type="button" class="secondary-button">Дизайн</button></li>
+    <li><button type="button" class="secondary-button">Маркетинг</button></li>
+</ul>
 
-    <h2 class="visually-hidden">Наші роботи</h2>
-    <ul class="list">
-        <li>
-            <img src="./images/tehnokryak1.jpg" alt="Технокряк" width="370" >
-            <h3 class="results-title">Технокряк</h3>
-            <p class="results-text">Дизайн</p>
-        </li>
-        <li>
-            <img src="./images/neworlean-goldenstar2.jpg" alt="Постер Новий Орлеан проти Голден Стар" width="370" >
-            <h3 class="results-title">Постер New Orlean vs Golden Star</h3>
-            <p class="results-text">Дизайн</p>
-        </li>
-        <li><img src="./images/seafood3.jpg" alt="Ресторан морська їжа" width="370" >
-        <h3 class="results-title">Ресторан Seafood</h3>
-        <p class="results-text">Додаток</p>
+<h2 class="visually-hidden">Наші роботи</h2>
+<ul class="menu-results list">
+    <li class="results-item">
+        <img src="./images/tehnokryak1.jpg" alt="Технокряк" width="370">
+        <div class="work-description">
+    <h3 class="results-title">Технокряк</h3>
+    <p class="results-text">Веб-сайт</p>
+        </div>
     </li>
-        <li><img src="./images/prime4.jpg" alt="Проєкт прайм" width="370" >
-        <h3 class="results-title">Проєкт Prime</h3>
-        <p class="results-text">Маркетинг</p>
-        </li>
-        <li><img src="./images/boxes5.jpg" alt="Проєкт коробки" width="370" >
-        <h3 class="results-title">Проєкт Boxes</h3>
-        <p class="results-text">Додаток</p>
-        </li>
-        <li><img src="./images/inspiration6.jpg" alt="Натхнення немає кордонів" width="370" >
-        <h3 lang="en" class="results-title">Inspiration has no Borders</h3>
-        <p class="results-text">Веб-сайт</p>
-        </li>
-        <li><img src="./images/limited-edition7.jpg" alt="Видання лімітована колекція">
-        <h3 class="results-title">Видання Limited Edition</h3>
-        <p class="results-text">Дизайн</p>
-        </li>
-        <li><img src="./images/lab8.jpg" alt="Проєкт лаб" width="370" >
-        <h3 class="results-title">Проєкт LAB</h3>
-        <p class="results-text">Маркетинг</p>
-        </li>
-        <li><img src="./images/growing-bussines9.jpg" alt="Розвиваючий бізнес" width="370" >
-        <h3 lang="en" class="results-title">Growing Business</h3>
-        <p class="results-text">Додаток</p>
-        </li>
-    </ul>
+    <li class="results-item">
+        <img src="./images/neworlean-goldenstar2.jpg" alt="Постер Новий Орлеан проти Голден Стар" width="370">
+        <div class="work-description">
+                <h3 class="results-title">Постер New Orlean vs Golden Star</h3>
+                <p class="results-text">Дизайн</p>
+        </div>
+    </li>
+    <li class="results-item"><img src="./images/seafood3.jpg" alt="Ресторан морська їжа" width="370">
+        <div class="work-description">
+                <h3 class="results-title">Ресторан Seafood</h3>
+                <p class="results-text">Додаток</p>
+        </div>
+    </li>
+    <li class="results-item"><img src="./images/prime4.jpg" alt="Проєкт прайм" width="370">
+        <div class="work-description">
+                <h3 class="results-title">Проєкт Prime</h3>
+                <p class="results-text">Маркетинг</p>
+        </div>
+    </li>
+    <li class="results-item"><img src="./images/boxes5.jpg" alt="Проєкт коробки" width="370">
+        <div class="work-description">
+                <h3 class="results-title">Проєкт Boxes</h3>
+                <p class="results-text">Додаток</p>
+        </div>
+    </li>
+    <li class="results-item"><img src="./images/inspiration6.jpg" alt="Натхнення немає кордонів" width="370">
+        <div class="work-description">
+                <h3 lang="en" class="results-title">Inspiration has no Borders</h3>
+                <p class="results-text">Веб-сайт</p>
+        </div>
+    </li>
+    <li class="results-item"><img src="./images/limited-edition7.jpg" alt="Видання лімітована колекція">
+        <div class="work-description">
+                <h3 class="results-title">Видання Limited Edition</h3>
+                <p class="results-text">Дизайн</p>
+        </div>
+    </li>
+    <li class="results-item"><img src="./images/lab8.jpg" alt="Проєкт лаб" width="370">
+        <div class="work-description">
+            <h3 class="results-title">Проєкт LAB</h3>
+            <p class="results-text">Маркетинг</p>
+        </div>
+    </li>
+    <li class="results-item"><img src="./images/growing-bussines9.jpg" alt="Розвиваючий бізнес" width="370">
+        <div class="work-description">
+            <h3 lang="en" class="results-title">Growing Business</h3>
+            <p class="results-text">Додаток</p>
+        </div>
+    </li>
+</ul>
+    </div>
 </section>
 </main>
 
 <footer class="footer">
-    <a class="link" href="./index.html"> <span class="logo-footer">Web</span><span
-            class="logo-footer-second">Studio</span></a>
-    <address>
-        <ul class="list">
-            <li>
-                <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
-                    class="place link">м. Київ, пр-т Лесі Українки, 26</a>
-            </li>
-            <li>
-                <a class="address-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-            <li>
-                <a class="phone-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
-        </ul>
-    </address>
+    <div class="container">
+        <a class="footer-logo link" href="./index.html"> <span class="logo-footer">Web</span><span
+                class="logo-footer-second">Studio</span></a>
+        <address>
+            <ul class="list">
+                <li class="menu-item">
+                    <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" target="_blank" rel="noopener noreferrer nofollow"
+                        class="place link">м. Київ, пр-т Лесі Українки, 26</a>
+                </li>
+                <li class="menu-item">
+                    <a class="address-footer link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                </li>
+                <li class="menu-item">
+                    <a class="phone-footer link" href="tel:+380961111111">+38 096 111 11 11</a>
+                </li>
+            </ul>
+        </address>
+    </div>
 </footer>
     </body>
     
