--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a class="logo-name link" href="./index.html"> <span class="logo">Web</span><span
             class="logo-second-word">Studio</span></a>
 
-    <ul class="page-navigation list">
+    <ul class="page-navigation-menu list">
         <li><a class="page-link link current" href="./index.html">Студія</a></li>
         <li><a class="page-link link" href="./portfolio.html">Портфоліо</a></li>
         <li><a class="page-link link" href="#">Контакти</a></li>
